--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy": "http://localhost:5000/api/v1",
+  "proxy": "http://localhost:3000",
   "name": "blog",
   "version": "0.1.0",
   "homepage": "./",
@@ -9,6 +9,8 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.0",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "firebase": "^9.14.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
