--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-js-pagination": "^3.0.3",
+    "react-loading-skeleton": "^3.1.0",
+    "react-responsive": "^9.0.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.6",
