--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "./",
   "private": true,
   "dependencies": {
+    "@mui/material": "^5.10.16",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
